--- a/Interactivity.ipynb
+++ b/Interactivity.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,20 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tyler\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2728: DtypeWarning: Columns (33,36) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get cleaned gun violence master dataset and states data\n",
     "directory = os.path.dirname(str(Path().resolve()) + '\\\\')\n",
@@ -55,26 +46,49 @@
     "gunViolence = pd.read_csv(path)\n",
     "\n",
     "path = os.path.join(directory, 'data', 'county_unemployment.csv')\n",
-    "countyData = pd.read_csv(path)"
+    "countyData = pd.read_csv(path)\n",
+    "\n",
+    "path = os.path.join(directory, 'data', 'predictions.csv')\n",
+    "predictions = pd.read_csv(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tyler\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  if sys.path[0] == '':\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "predictionsSub = predictions[((predictions['year']==2019) & (predictions['month']==1))]\n",
+    "predictionsSub = predictionsSub.drop(columns=['year', 'month', 'Gun Death Rate (Ranked High to Low)', 'Gun Denials 2008', 'Mental Health 2008', 'Gun Ownership Rank', 'Gun Denials 2017'])\n",
+    "\n",
+    "def decode(row):\n",
+    "    for c in predictionsSub.columns:\n",
+    "        if row[c] == 1:\n",
+    "            return c\n",
+    "predictionsSub['State'] = predictionsSub.apply(decode, axis=1)\n",
+    "predictionsSub = predictionsSub[['State', 'predictions']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stateGeom = pd.read_json('data/us_states_20m.json')\n",
+    "for i in range(len(stateGeom['features'])):\n",
+    "    stateGeom['type'][i] = stateGeom['features'][i]['properties']['NAME']\n",
+    "    stateGeom['features'][i] = stateGeom['features'][i]['geometry']\n",
+    "stateGeom.rename(columns={'type':'State',\n",
+    "                          'features':'Geometry'}, \n",
+    "                 inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "stateCols = ['state', 'Mental_Health_Records_Submitted_2008', 'Mental_Health_Records_Submitted_2017', 'Gun_Sale_Denials_2008', \n",
     "             'Gun_Sale_Denials_2017', 'Giffords Gun Safety Score',  'Gun Deaths per 100k People (2018)', \n",
@@ -85,11 +99,33 @@
     "countyData = countyData[countyCols].drop_duplicates('County')\n",
     "countyData.columns.values[1] = '2015 Unemployment Rate'\n",
     "countyData = countyData.reset_index()\n",
+    "stateData = stateData.reset_index()\n",
+    "stateData = stateData.drop(columns=['index'])\n",
     "countyData = countyData[['County', '2015 Unemployment Rate']]\n",
-    "for i in range(len(countyData['County'])):\n",
-    "    countyData['County'][i] = countyData['County'][i][:-7]\n",
-    "\n",
-    "dropdownOptions = np.concatenate([stateData.columns.values[1:],countyData.columns.values[1:]])"
+    "countyData['County'] = countyData['County'].str.replace(' County', '', regex=True)\n",
+    "stateData = stateGeom.merge(stateData, left_on='State', right_on='state')\n",
+    "stateData = stateData.drop(columns=['state'])\n",
+    "stateData = stateData.merge(predictionsSub, left_on='State', right_on='State')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Rename StateData\n",
+    "stateData.rename(columns={'predictions':'# Predicted Incidents (2019)',\n",
+    "                          '5_Year_Cost':'5-Year Gun Ownership Cost (USD)',\n",
+    "                          'Handgun_Carry_Permit_Fee':'Handgun Carry Permit Fee (USD)',\n",
+    "                          'Years_Valid':'Permit Term (Years)',\n",
+    "                          'Mental_Health_Records_Submitted_2008':'Mental Health Records Submitted (2008)',\n",
+    "                          'Mental_Health_Records_Submitted_2017':'Mental Health Records Submitted (2017)',\n",
+    "                          'Gun_Sale_Denials_2008':'Gun Sale Denials (2008)',\n",
+    "                          'Gun_Sale_Denials_2017':'Gun Sale Denials (2017)'\n",
+    "                         }, \n",
+    "                 inplace=True)\n",
+    "dropdownOptions = np.concatenate([stateData.columns.values[2:],countyData.columns.values[1:]])"
    ]
   },
   {
@@ -101,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +148,7 @@
     "    return IFrame('index.html', width='100%', height='650px')\n",
     "\n",
     "# Define list of factors that should be plotted with high values as red instead of green\n",
-    "badFactorsList = ['Gun_Death_Rate_2018 (per 100k people)', '# of guns per capita', '# of guns registered','2015 Unemployment Rate']\n",
+    "badFactorsList = ['Gun Deaths per 100k People (2018)', '# of guns per capita', '# of guns registered','2015 Unemployment Rate']\n",
     "def getColColor(col):\n",
     "    if (col in badFactorsList):\n",
     "        return 'OrRd'\n",
@@ -132,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -140,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "009770dbe2df4fbaa20a933e3c75ad88",
+       "model_id": "0463e517236046738100b4fd3e495eed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +196,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "Dropdown(description='Factor to Plot:', index=12, layout=Layout(width='40%'), options=('Mental_Health_Records_Submitted_2008', 'Mental_Health_Records_Submitted_2017', 'Gun_Sale_Denials_2008', 'Gun_Sale_Denials_2017', 'Giffords Gun Safety Score', 'Gun Deaths per 100k People (2018)', 'Gun Death Rate (Ranked High to Low)', '# of guns per capita', '# of guns registered', 'Permit Type', 'Handgun_Carry_Permit_Fee', 'Years_Valid', '5_Year_Cost', 'Happiness Score', '2015 Unemployment Rate'), style=DescriptionStyle(description_width='initial'), value='5_Year_Cost')"
+       "Dropdown(description='Factor to Plot:', index=12, layout=Layout(width='40%'), options=('Mental Health Records Submitted (2008)', 'Mental Health Records Submitted (2017)', 'Gun Sale Denials (2008)', 'Gun Sale Denials (2017)', 'Giffords Gun Safety Score', 'Gun Deaths per 100k People (2018)', 'Gun Death Rate (Ranked High to Low)', '# of guns per capita', '# of guns registered', 'Permit Type', 'Handgun Carry Permit Fee (USD)', 'Permit Term (Years)', '5-Year Gun Ownership Cost (USD)', 'Happiness Score', '# Predicted Incidents (2019)', '2015 Unemployment Rate'), style=DescriptionStyle(description_width='initial'), value='5-Year Gun Ownership Cost (USD)')"
       ]
      },
      "metadata": {},
@@ -169,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d2493cf48c245b58cacac2bb68c9e42",
+       "model_id": "ddcdf783f1bc45f0a9a9afdc0e3507d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -198,7 +234,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acefe1ab8670430dbded571c7d37547a",
+       "model_id": "36a4c51106b2474788879154414c23a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -227,7 +263,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61b04757530645cea039e6285880323a",
+       "model_id": "50c61484155e444681da4db22ccf4618",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,7 +303,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1f20e5e0b70>"
+       "<IPython.lib.display.IFrame at 0x191ede63128>"
       ]
      },
      "metadata": {},
@@ -277,7 +313,7 @@
    "source": [
     "dropdown = widgets.Dropdown(\n",
     "    options=dropdownOptions,\n",
-    "    value='5_Year_Cost',\n",
+    "    value='5-Year Gun Ownership Cost (USD)',\n",
     "    description='Factor to Plot:',\n",
     "    disabled=False,\n",
     "    layout=Layout(width='40%'),\n",
@@ -323,21 +359,14 @@
     "            geo_data='data/us_states_20m.json',\n",
     "            name=dropdown.value,\n",
     "            data=stateData,\n",
-    "            columns=['state', dropdown.value],\n",
+    "            columns=['State', dropdown.value],\n",
     "            key_on='feature.properties.NAME',\n",
     "            fill_color=getColColor(dropdown.value),\n",
     "            fill_opacity=0.5,\n",
     "            line_opacity=0.2,\n",
     "            legend_name=dropdown.value\n",
     "        ).add_to(folium_map)\n",
-    "    folium.GeoJson(data='data/us_states_20m.json',\n",
-    "               name='US States',smooth_factor=2,\n",
-    "               style_function=lambda x: {'color':'black','fillColor':'transparent','weight':1},\n",
-    "                tooltip=folium.GeoJsonTooltip(fields=['NAME'],\n",
-    "                                              labels=False,\n",
-    "                                              sticky=False),\n",
-    "               highlight_function=lambda x: {'weight':3,'fillColor':'grey'}\n",
-    "              ).add_to(folium_map)\n",
+    "\n",
     "    folium.LayerControl().add_to(folium_map)\n",
     "    toDisp = embed_map(folium_map)\n",
     "    display(toDisp)\n",
