Updated flask to have all of Tyler's work

--- a/Interactivity.ipynb
+++ b/Interactivity.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,13 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "stateCols = ['state', 'Mental_Health_Records_Submitted_2008', 'Mental_Health_Records_Submitted_2017', 'Gun_Sale_Denials_2008', \n",
     "             'Gun_Sale_Denials_2017', 'Giffords Gun Safety Score',  'Gun Deaths per 100k People (2018)', \n",
-    "             'Gun Death Rate (Ranked High to Low)', '# of guns per capita', '# of guns registered', 'Permit Type',  \n",
+    "             'Gun Death Rate (Ranked High to Low)', '# of guns per capita', '# of guns registered',  \n",
     "             'Handgun_Carry_Permit_Fee', 'Years_Valid', '5_Year_Cost', 'Happiness Score']\n",
     "countyCols = ['County', 'Rate']\n",
     "stateData = gunViolence[stateCols].drop_duplicates('state')\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -176,27 +176,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0463e517236046738100b4fd3e495eed",
+       "model_id": "33e43aca35a545d0953be536ce0f69c2",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>Dropdown</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
       "text/plain": [
-       "Dropdown(description='Factor to Plot:', index=12, layout=Layout(width='40%'), options=('Mental Health Records Submitted (2008)', 'Mental Health Records Submitted (2017)', 'Gun Sale Denials (2008)', 'Gun Sale Denials (2017)', 'Giffords Gun Safety Score', 'Gun Deaths per 100k People (2018)', 'Gun Death Rate (Ranked High to Low)', '# of guns per capita', '# of guns registered', 'Permit Type', 'Handgun Carry Permit Fee (USD)', 'Permit Term (Years)', '5-Year Gun Ownership Cost (USD)', 'Happiness Score', '# Predicted Incidents (2019)', '2015 Unemployment Rate'), style=DescriptionStyle(description_width='initial'), value='5-Year Gun Ownership Cost (USD)')"
+       "Dropdown(description='Factor to Plot:', index=10, layout=Layout(width='40%'), options=('Mental Health Records …"
       ]
      },
      "metadata": {},
@@ -205,27 +190,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddcdf783f1bc45f0a9a9afdc0e3507d9",
+       "model_id": "f95cd7bcbdd84ab08044d4a269ee1fcf",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>IntSlider</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
       "text/plain": [
-       "IntSlider(value=2015, description='Year:', layout=Layout(width='40%'), max=2018, min=2014, style=SliderStyle(description_width='initial'))"
+       "IntSlider(value=2015, description='Year:', layout=Layout(width='40%'), max=2018, min=2014, style=SliderStyle(d…"
       ]
      },
      "metadata": {},
@@ -234,27 +204,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36a4c51106b2474788879154414c23a6",
+       "model_id": "7f0367b85b2f409085e5a68a014cb1c1",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>IntSlider</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
       "text/plain": [
-       "IntSlider(value=500, description='Number of Incidents:', layout=Layout(width='40%'), max=20000, step=100, style=SliderStyle(description_width='initial'))"
+       "IntSlider(value=500, description='Number of Incidents:', layout=Layout(width='40%'), max=20000, step=100, styl…"
       ]
      },
      "metadata": {},
@@ -263,25 +218,10 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50c61484155e444681da4db22ccf4618",
+       "model_id": "278f455638cd4d1fac49bc035ef0a109",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>Button</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
       "text/plain": [
        "Button(description='Go!', style=ButtonStyle())"
       ]
@@ -303,7 +243,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x191ede63128>"
+       "<IPython.lib.display.IFrame at 0x163f75850f0>"
       ]
      },
      "metadata": {},
@@ -683,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
